<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical"
	tools:context=".RegisterActivity">

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/bookitlogo"
		android:src="@drawable/templogo" />

	<TextView
		android:id="@+id/welcome_to_bookit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="50dp"
		android:layout_marginTop="50dp"
		android:layout_marginEnd="50dp"
		android:layout_marginBottom="18dp"
		android:gravity="center"
		android:text="Signup"
		android:textColor="@color/black"
		android:textSize="24sp" />

	<EditText
		android:id="@+id/editEmailAddress"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="25dp"
		android:layout_marginRight="25dp"
		android:layout_marginBottom="15dp"
		android:autofillHints=""
		android:background="@drawable/custom_edit_text"
		android:ems="10"
		android:hint="@string/email"
		android:inputType="textEmailAddress"
		android:padding="15dp" />

	<EditText
		android:id="@+id/editTextPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="25dp"
		android:layout_marginRight="25dp"
		android:autofillHints=""
		android:background="@drawable/custom_edit_text"
		android:ems="10"
		android:hint="@string/password"
		android:inputType="textPassword"
		android:padding="15dp" />

	<Button
		android:id="@+id/registerButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="25dp"
		android:background="@drawable/custom_button"
		android:padding="8dp"
		android:text="Create Account"
		android:textColor="#FFFFFF"
		android:textSize="20sp" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:padding="5dp"
		android:text="@string/or"
		android:textAlignment="center"
		android:textSize="20sp"
		android:textStyle="bold" />

	<Button
		android:id="@+id/googleLoginButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="25dp"
		android:background="@drawable/custom_button"
		android:color="@color/white"
		android:padding="8dp"
		android:text="@string/continue_with_google"
		android:textColor="#FFFFFF"
		android:textSize="20sp" />


	<TextView
		android:id="@+id/textView7"
		android:layout_width="322dp"
		android:layout_height="25dp"
		android:text="Have an account? Login"
		android:textAlignment="center" />


</LinearLayout>